@@ -48,7 +48,9 @@ S3method(sort,dfm)
 S3method(statLexdiv,dfm)
 S3method(statLexdiv,numeric)
 S3method(stopwordsRemove,character)
+S3method(stopwordsRemove,collocations)
 S3method(stopwordsRemove,dfm)
+S3method(stopwordsRemove,dgCMatrix)
 S3method(subset,corpus)
 S3method(summary,corpus)
 S3method(summary,textmodel)
