@@ -9,54 +9,81 @@
 #' list for English is used. The function \link{stopwordsGet} can load a default
 #' set of stopwords for many languages.
 #' 
-#' @param text Text from which stopwords will be removed
-#' @param stopwords Character vector of stopwords to remove - if none is 
-#'   supplied, a default set of English stopwords is used
-#' @return a character vector or dfm with stopwords removed
+#' @param x Object from which stopwords will be removed
+#' @param stopwords Character vector of stopwords to remove.  Now requires an explicit
+#' list to be supplied, for instance \code{stopwordsGet("english")}.
+#'   @param verbose if \code{TRUE} print message about how many items were removed
+#' @return an object with stopwords removed
 #' @rdname stopwordsRemove
 #' @export
 #' @examples
 #' ## examples for character objects
 #' someText <- "Here's some text containing words we want to remove."
-#' itText <- "Ecco alcuni di testo contenente le parole che vogliamo rimuovere."
-#' stopwordsRemove(someText)
+#' stopwordsRemove(someText, stopwordsGet("english"))
 #' stopwordsRemove(someText, stopwordsGet("SMART"))
-#' stopwordsRemove(itText, stopwordsGet("italian"))
 #' stopwordsRemove(someText, c("some", "want"))
+#' itText <- "Ecco alcuni di testo contenente le parole che vogliamo rimuovere."
+#' stopwordsRemove(itText, stopwordsGet("italian"))
 #' 
 #' ## example for dfm objects
-#' docmat <- dfm(uk2010immig)
-#' docmatNostopwords <- stopwordsRemove(docmat)
-#' dim(docmat)
-#' dim(docmatNostopwords)
-#' dim(stopwordsRemove(docmat, stopwordsGet("SMART")))
-stopwordsRemove <- function(text, stopwords=NULL) {
+#' mydfm <- dfm(uk2010immig, verbose=FALSE)
+#' stopwordsRemove(mydfm, stopwordsGet("english"))
+#' mydfms <- dfm(uk2010immig, verbose=FALSE, matrixType="sparse")
+#' dim(stopwordsRemove(mydfms, stopwordsGet("SMART")))
+#' 
+#' ## example for collocations
+#' (myCollocs <- collocations(inaugTexts, top=20))
+#' stopwordsRemove(myCollocs, stopwordsGet("english"))
+stopwordsRemove <- function(x, stopwords=NULL, verbose=TRUE) {
     UseMethod("stopwordsRemove")
 }
 
 
 #' @rdname stopwordsRemove
 #' @export
-stopwordsRemove.character <- function(text, stopwords=NULL) {
-    if (is.null(stopwords)) {
-        stopwords <- stopwordsGet("english")
-    }
-    ret <- gsub(paste("(\\b|\\s)(", paste(stopwords, collapse="|"), ")(\\b)", sep=""), "", text, ignore.case=TRUE)
+stopwordsRemove.character <- function(x, stopwords=NULL, verbose=TRUE) {
+    if (is.null(stopwords))
+        stop("Must supply a character vector of stopwords, e.g. stopwordsGet(\"english\")")
+    ret <- gsub(paste("(\\b|\\s)(", paste(stopwords, collapse="|"), ")(\\b)", sep=""), "", x, ignore.case=TRUE)
+    # if (verbose) cat("Removed", sum(ret==""), "tokens, from a list of", length(stopwords), "stopwords.")
     ret[ret != ""]
     ## Note: Will not remove capitalized words, such as those starting the sentence.  e.g. "The man."
 }
 
 #' @rdname stopwordsRemove
 #' @export
-stopwordsRemove.dfm <- function(text, stopwords=NULL) {
-    if (!("dfm" %in% class(text)) ) {
-        stop(paste(text, "does not appear to be a valid dfm."))
-    }
-    if (is.null(stopwords)) {
-        stopwords <- stopwordsGet("english")
-    }
-    removeIndex <- which(colnames(text) %in% stopwords)
-    return(text[, -removeIndex])
+stopwordsRemove.dfm <- function(x, stopwords=NULL, verbose=TRUE) {
+    if (is.null(stopwords))
+        stop("Must supply a character vector of stopwords, e.g. stopwordsGet(\"english\")")
+    removeIndex <- which(colnames(x) %in% stopwords)
+    if (verbose) cat("Removed", format(length(removeIndex), big.mark=","),  
+                     "features, from a list of", length(stopwords), "stopwords.\n")
+    x[, -removeIndex]
+}
+
+#' @rdname stopwordsRemove
+#' @export
+stopwordsRemove.dgCMatrix <- function(x, stopwords=NULL, verbose=TRUE) {
+    if (is.null(stopwords))
+        stop("Must supply a character vector of stopwords, e.g. stopwordsGet(\"english\")")
+    removeIndex <- which(colnames(x) %in% stopwords)
+    if (verbose) cat("Removed", format(length(removeIndex), big.mark=","),  
+                     "features, from a list of", length(stopwords), "stopwords.\n")
+    x[, -removeIndex]
+}
+    
+#' @rdname stopwordsRemove
+#' @export
+stopwordsRemove.collocations <- function(x, stopwords=NULL, verbose=TRUE) {
+    if (is.null(stopwords))
+        stop("Must supply a character vector of stopwords, e.g. stopwordsGet(\"english\")")
+    removeIndex <- grep(paste0("\\b", paste(stopwords, collapse="\\b|\\b"), "\\b"), 
+                        x$collocation)
+    if (length(removeIndex) > 0) 
+        x <- x[-removeIndex, ]
+    if (verbose) cat("Removed", format(length(removeIndex), big.mark=","), 
+                     "collocations, from a list of", length(stopwords), "stopwords.\n")
+    x
 }
 
 
